--- a/04_manuscript/Balfour_PR-class_manuscript_00.RMD
+++ b/04_manuscript/Balfour_PR-class_manuscript_00.RMD
@@ -11,27 +11,28 @@ output:
     df_print: paged
 bibliography: references.bib
 csl: "https://raw.githubusercontent.com/citation-style-language/styles/master/ecology-letters.csl"
+knit: (function(inputFile, encoding) {
+    rmarkdown::render(inputFile, encoding = encoding, output_dir = "~/PR-class/04_manuscript/rendered")
+  })
 ---
 
-```{r setup, eval=F, echo=T, include=F}
-install.packages(c("knitr", "lterdatasampler", "ggplot2", "rstudioapi", "rmarkdown", "tinytex"))
-```
-
 ```{r packages, eval=F, echo=T, include=F}
+# Install the required packages:
+install.packages(c("knitr", "lterdatasampler", "ggplot2", "rmarkdown", "renv"))
+
+# Load the packages to your library:
 library("knitr")
 library("lterdatasampler")
 library("ggplot2")
-library("rstudioapi")
+library("rmarkdown")
+library("renv")
 ```
 
 ```{r matrix, echo=T, warning=F, include=F}
-# Acquire the "hbr_maples" dataset, and load these data to a data matrix called
-# "maples.data":
+# Acquire the "hbr_maples" dataset, and load these data to a data matrix called "maples.data":
 maples.data<-lterdatasampler::hbr_maples
-# Save these data as a .csv file called "mapledata.csv" in the "00_rawdata"
-# folder:
-write.table(maples.data,  file="~/PR-class/00_rawdata/Balfour_PR-class_raw-data_00.csv", append=F, 
-quote=F, sep=",", dec=".", col.names=T, row.names=F)
+# Save these data as a .csv file called "mapledata.csv" in the "00_rawdata" folder:
+write.table(maples.data,  file="../00_rawdata/Balfour_PR-class_raw-data_00.csv", append=F, quote=F, sep=",", dec=".", col.names=T, row.names=F)
 ```
 
 ## Introduction
@@ -47,13 +48,11 @@ The dataset used, "hbr_maples" [@juice], was loaded from the R package "lterdata
 Table 1: Summary of statistics generated from independent t-tests comparing the
 stem lengths, leaf areas, leaf dry masses, and stem dry masses of maples in
 reference and calcium addition ("W1") transects.
-```{r ttests, echo=F, warning=FALSE}
-# Load the "maples.data.csv" file created previously from the "00_rawdata"
-# folder to a data matrix:
-maples.data<-read.csv("~/PR-class/00_rawdata/Balfour_PR-class_raw-data_00.csv")
+```{r ttests, echo=F, warning=F}
+# Load the "maples.data.csv" file created previously from the "00_rawdata" folder to a data matrix:
+maples.data<-read.csv("../00_rawdata/Balfour_PR-class_raw-data_00.csv")
 
-# Complete independent t-tests for each trait, which will be written into one
-# data matrix:
+# Complete independent t-tests for each trait, which will be written into one data matrix:
 t.tests<-list()
 # Stem length
 t.tests[[1]]<-t.test(stem_length~watershed, var.equal=TRUE, data=maples.data)
@@ -64,7 +63,8 @@ t.tests[[3]]<-t.test(leaf_dry_mass~watershed, var.equal=TRUE, data=maples.data)
 # Stem dry mass
 t.tests[[4]]<-t.test(stem_dry_mass~watershed, var.equal=TRUE, data=maples.data)
 
-# Extract the relevant statistics from these t-tests and place into one matrix:
+# Extract the relevant statistics from these t-tests and place into
+# one matrix:
 table1.ttests<-sapply(t.tests, function(x) {
   c(x$estimate[1], x$estimate[2], ci.lower = x$conf.int[1], 
     ci.upper = x$conf.int[2], x$statistic[1], x$parameter[1],
@@ -82,34 +82,46 @@ table1.ttests
 ```
 
 
-```{r fig1, echo=FALSE, warning=FALSE}
-#Create figure 1: a boxplot of the mean stem lengths exhibited in each watershed (reference and W1):
+```{r fig1, echo=F, message=F, warning=F}
+# Create figure 1: a boxplot of the mean stem lengths exhibited in each watershed (reference and W1):
 library(ggplot2)
-ggplot(data=maples.data, aes(x=watershed, y=stem_length,   fill=watershed)) + geom_boxplot() + ggtitle("Maple stem lengths in watersheds")
+fig1<-ggplot(data=maples.data, aes(x=watershed, y=stem_length,   fill=watershed)) + geom_boxplot() + ggtitle("Maple stem lengths in watersheds")
+fig1
 ```
 
 Figure 1: A box plot depicting the distribution of sample stem lengths in the reference (mean=82.59888) and calcium addition ("W1"; mean=91.09611) watersheds. An independent t-test indicates that stem length is significantly greater in the calcium addition watershed than the reference watershed (t(357)=-5.4588, p\<0.05).
 
-```{r fig2, echo=FALSE, warning=FALSE}
-#Create figure 2: a boxplot of the mean leaf areas exhibited in each watershed (reference and W1):
-ggplot(data=maples.data, aes(x=watershed, y=leaf1area,   fill=watershed)) + geom_boxplot() + ggtitle("Maple leaf areas in watersheds")
+```{r fig2, echo=F, message=F, warning=F}
+# Create figure 2: a boxplot of the mean leaf areas exhibited in each watershed (reference and W1):
+fig2<-ggplot(data=maples.data, aes(x=watershed, y=leaf1area,   fill=watershed)) + geom_boxplot() + ggtitle("Maple leaf areas in watersheds")
+fig2
 ```
 
 Figure 2: A box plot depicting the distribution of sample leaf areas in the reference (mean=9.47105) and calcium addition ("W1"; mean=14.12907) watersheds. An independent t-test indicates that leaf area is significantly greater in the calcium addition watershed than the reference watershed (t(238)=-10.854, p\<0.05).
 
-```{r fig3, echo=FALSE, warning=FALSE}
-#Create figure 3: a boxplot of the mean leaf dry masses exhibited in each watershed (reference and W1):
-ggplot(data=maples.data, aes(x=watershed, y=leaf_dry_mass,   fill=watershed)) + geom_boxplot() + ggtitle("Maple leaf dry masses in watersheds")
+```{r fig3, echo=F, message=F, warning=F}
+# Create figure 3: a boxplot of the mean leaf dry masses exhibited in each watershed (reference and W1):
+fig3<-ggplot(data=maples.data, aes(x=watershed, y=leaf_dry_mass,   fill=watershed)) + geom_boxplot() + ggtitle("Maple leaf dry masses in watersheds")
+fig3
 ```
 
 Figure 3: A box plot depicting the distribution of sample leaf dry masses in the reference (mean=0.04953296) and calcium addition ("W1"; mean=0.07774333) watersheds. An independent t-test indicates that leaf dry mass is significantly greater in the calcium addition watershed than the reference watershed (t(357)=-8.0459, p\<0.05).
 
-```{r fig4, echo=FALSE, warning=FALSE}
-#Create figure 4: a boxplot of the mean stem dry masses exhibited in each watershed (reference and W1):
-ggplot(data=maples.data, aes(x=watershed, y=stem_dry_mass,   fill=watershed)) + geom_boxplot() + ggtitle("Maple stem dry masses in watersheds")
+```{r fig4, echo=F, message=F, warning=F}
+# Create figure 4: a boxplot of the mean stem dry masses exhibited in each watershed (reference and W1):
+fig4<-ggplot(data=maples.data, aes(x=watershed, y=stem_dry_mass,   fill=watershed)) + geom_boxplot() + ggtitle("Maple stem dry masses in watersheds")
+fig4
 ```
 
 Figure 4: A box plot depicting the distribution of sample stem dry masses in the reference (mean=0.03676592) and calcium addition ("W1"; mean=0.05331278) watersheds. An independent t-test indicates that stem dry mass is significantly greater in the calcium addition watershed than the reference watershed (t(357)=-5.4465, p\<0.05).
+
+```{r pdfs, echo=F, include=F}
+# Save these figures as pdfs in the "03_figs" folder:
+pdf(fig1, file="../03_figs/Balfour_PR-class_figure1_stem-length_00.pdf")
+pdf(fig2, file="../03_figs/Balfour_PR-class_figure2_leaf-area_00.pdf")
+pdf(fig3, file="../03_figs/Balfour_PR-class_figure3_leaf-dry-mass_00.pdf")
+pdf(fig4, file="../03_figs/Balfour_PR-class_figure4_stem-dry-mass_00.pdf")
+```
 
 ## Discussion
 
@@ -120,8 +132,3 @@ The results of this study indicate that calcium availability can influence the l
 The leaf anatomy and plant size of *Acer saccharum* are influenced by calcium availability, with calcium addition being correlated with longer stem lengths, larger leaf areas, larger leaf dry masses, and larger stem dry masses in seedlings.
 
 ## References
-
-```{r printpdf, include=F}
-rmarkdown::render(input = "./Balfour_PR-class_manuscript_00.RMD", 
-                  output_dir = "./rendered")
-```
